<resources>
    <string name="app_name">Livechat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">splash</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="prompt_username">Username</string>
    <string name="livechat_logo">livechat_logo</string>
    <string name="livechat_application">LiveChat Application</string>
    <string name="register">REGISTER</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="have_an_account_login_here">Have an account? Login here</string>
    <string name="login">LOGIN</string>
    <string name="new_register_now">New? REGISTER NOW!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="this_is_a_list_of_users">This is a list of users</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_this_project">About this project</string>
    <string name="logout">Logout</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="this_is_a_button">this is a button</string>
    <string name="type_a_message">Type a message</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="public_room">Public Room</string>
    <string name="enable_notifications">Enable Notifications!</string>
</resources>