<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/livechat_logo"
        android:src="@drawable/chat_main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="205dp"
        android:text="@string/livechat_application"
        android:textColor="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <EditText
        android:id="@+id/username_login"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="56dp"
        android:allowUndo="true"
        android:alpha="0.62"
        android:autofillHints="username"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:enabled="true"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:allowUndo="true"
        android:alpha="0.62"
        android:autofillHints="password"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:enabled="true"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username_login"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/login"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_gravity="start"

        android:layout_marginBottom="84dp"
        android:background="@drawable/rounded"
        android:enabled="true"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/register_page"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:enabled="true"
        android:text="@string/new_register_now"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        app:layout_constraintVertical_bias="0.955" />


    <Button
        android:id="@+id/enable_notifications"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded"
        android:text="@string/enable_notifications"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>