<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/nav_header_main"
        android:layout_width="413dp"
        android:layout_height="179dp"
        tools:ignore="VisualLintBounds"
        tools:layout_editor_absoluteX="-2dp" />

    <TextView
        android:id="@+id/logged_user_text"
        android:layout_width="233dp"
        android:layout_height="31dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_textview"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/usersList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_main"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/usersList"
        android:layout_width="302dp"
        android:layout_height="390dp"
        android:layout_margin="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="32dp"

        android:background="@color/material_dynamic_primary80"
        android:contentDescription="@string/this_is_a_list_of_users"
        android:scrollbarSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/accountSettingsPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_main"
        app:layout_constraintVertical_bias="1.0">

        <TableLayout
            android:id="@+id/onlineUsersTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/publicRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/public_chat"
                    android:contentDescription="@string/app_name" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/public_room"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/accountSettingsPage"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_textview"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/account_settings"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/aboutThisProjectPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/aboutThisProjectPage"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/rounded_textview"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/about_this_project"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/logoutButton"
        android:layout_width="297dp"
        android:layout_height="37dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_logout"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>